# hackathon1_repeat

./: .dockerignore  .env.example  .eslintignore  .eslintrc.js  .gitattributes  .gitignore  .lighthouserc.json  .mcp-alternatives.json  .mcp.json  .npmrc  .prettierignore  .prettierrc.js  1.md  2.md  AUTHENTICATION_TEST_REPORT.md  CHANGES_REVIEW.md  CHATBOT_WIDGET_SUMMARY.md  CLAUDE.md  CLEANUP_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_PLAN.md  DEPLOYMENT_READY.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUMMARY.md  DEPLOYMENT_TESTING.md  DEPLOYMENT_TEST_REPORT.md  DEPLOY_NOW.md  FILE_REFERENCE.md  FLOATING_CHAT_IMPLEMENTATION.md  FLOATING_CHAT_QUICK_START.md  FRONTEND_DEPLOYMENT.md  GITHUB_OAUTH_COMPLETE.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  PHASE1_COMPLETION.md  PHASE5_TEST_RESULTS.md  PHASE8_VALIDATION_REPORT.md  (+32 more)
.claude/: settings.json  settings.local.example.json
.claude/agents/: AGENT_REVIEW_REPORT.md  CORRECTIONS_APPLIED.md  (+7 more)
.docusaurus/: client-manifest.json  client-modules.js  docusaurus.config.mjs  globalData.json  i18n.json  registry.js  routes.js  routesChunkNames.json
backend/: .dockerignore  .env.production.example  .env.staging  .flake8  .railwayignore  Dockerfile  OWASP_SECURITY_CHECKLIST.md  RAILWAY_DEPLOYMENT.md  README.md  TEST_REPORT.md  chatbot_improvement_results.md  check_db_status.py  cleanup_qdrant.py  conftest.py  docker-compose.yml  inspect_qdrant.py  nixpacks.toml  populate_data.py  pyproject.toml  pytest.ini  railway.json  render.yaml  requirements.txt  reset_qdrant.py  run_all_migrations_staging.py  run_migrations.py  run_staging_migration.py  start.sh  startup.py  test_chatbot_improved.py  test_chunking.js  test_chunking_debug.js  test_chunking_debug2.js  test_chunking_fixed.js  test_qdrant.py  validate_production_config.py  verify_db.py
backend/app/: __init__.py  config.py  main.py  mock_main.py
backend/app/middleware/: __init__.py  auth.py  cors.py  csrf.py  logging.py  rate_limit.py
backend/app/migrations/: 000_drop_old_tables.sql  001_create_chat_tables.sql  002_add_auto_purge.sql  003_add_confidence_column.sql  004_create_users_table.sql  005_create_profiles_table.sql  006_link_sessions_to_users.sql  007_add_github_oauth.sql  008_personalization_schema.sql  run_migrations.py  run_migrations.sql
backend/app/models/: __init__.py  chapter_metadata.py  chapter_progress.py  chapter_recommendation.py  chat.py  citations.py  profile.py  query.py  skill_level_classification.py  token.py  user.py
backend/app/routers/: __init__.py  auth.py  health.py  oauth.py  personalization.py  progress.py  query.py  sessions.py  users.py
backend/app/services/: __init__.py  auth_service.py  chat_service.py  classification_service.py  github_oauth_service.py  jwt_service.py  llm_service.py  oauth_service.py  password_service.py  personalization_service.py  profile_service.py  progress_tracking_service.py  rag_service.py  rate_limiter.py  recommendation_service.py  user_service.py  vector_service.py
backend/scripts/: rollback_migration_staging.sh  run_migration_staging.sh  smoke_test_staging.sh
backend/static/data/: faq-fallback.json
backend/tests/: __init__.py  rag_test_summary.md  test_rag_pipeline_demo.py
backend/tests/benchmark/: README.md  __init__.py  auth_performance_test.py  conftest.py  test_faithfulness.py  test_questions.json  test_relevance.py
backend/tests/integration/: __init__.py  test_personalization_api.py
backend/tests/security/: OWASP_TOP_10_AUDIT.md  PERFORMANCE_ANALYSIS.md  QUICKSTART_VALIDATION.md
backend/tests/unit/: __init__.py  test_classification_service.py  test_personalization_service.py  test_progress_service.py  test_recommendation_service.py
docs/: chatbot-widget-integration.md  github-pages-deployment-research.md  intro.md
scripts/: config.yaml  extract-code-examples.py  generate-content-hash.ts  index-content-to-qdrant.py  measure-ndcg.py  run-all-validations.bat  run-all-validations.sh  translate-chapters.ts  validate-claude-skills.js  validate-code-examples.py  validate-readability.py  validate-spec-numbering.sh  validate-terms.ts
specs/: lighthouse-optimization-research.md
tests/: search-queries.json  setup.js
(+644 files in other folders)
